exercises and numpy

--- a/1_python_basics.ipynb
+++ b/1_python_basics.ipynb
@@ -8,7 +8,7 @@
     "\n",
     "This is an interactive Jupyter Notebook explaining the very basics of Python that you'll need for the Machine Learning Workshop.\n",
     "\n",
-    "Please make sure you understand everything mentioned here and are able to solve the exercises in the other notebook!\n",
+    "Please make sure you understand everything mentioned here and are able to solve the exercises in the next notebook!\n",
     "\n",
     "This is only a very brief introduction, mostly intended for people who already know a bit about computer science. If you feel this does not provide enough information for you, please consider looking at these additional references:\n",
     "- [Official Python Tutorial](https://docs.python.org/3/tutorial/)\n",
@@ -23,7 +23,7 @@
     "\n",
     "You have to execute all the cells starting at the beginning for everything to work as expected. If you change any variable names or their values, be prepared for different outcomes. You can execute cells multiple times and jump back and forth; the number next to the cell tells you the order of execution - if a cell below changes a variable used in the cell above it and you execute the cell above again, the output might be different from before as it uses the updated variable value. \n",
     "\n",
-    "Should the code get stuck (`In [*]` means the cell is currently executing the code in it; in our examples this should never take more than a few seconds), click the \"stop\" button at the top or select \"Kernel > Interrupt\" from the menu bar. If all goes wrong, just close the tab with the notebook and open it again."
+    "Should the code get stuck (`In [*]` means the cell is currently executing the code in it; in our examples this should never take more than a few seconds), click the \"stop\" button at the top or select \"Kernel > Interrupt\" from the menu bar. If all goes wrong, just close the tab with the notebook, go back to the [GitHub repository](https://github.com/cod3licious/python_tutorial) and open it again."
    ]
   },
   {
@@ -756,6 +756,18 @@
     "print(i)\n",
     "# just like list indexing, you can also select parts of a string\n",
     "print(a_str[i:i+len(\"hello\")]) # what is happening here?"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# count how often an element occurs in a list\n",
+    "print(['a', 'b', 'r', 'a', 'c', 'a', 'd', 'a', 'b', 'r', 'a'].count(\"a\"))\n",
+    "# count how often a substring occurs in a string\n",
+    "print(\"abracadabrababababa\".count(\"aba\"))"
    ]
   },
   {
@@ -1607,6 +1619,26 @@
     "# sort the list based on the return values of the square function\n",
     "# i.e., compute square(i) for every i in the list and then use these values to sort the original values\n",
     "sorted(a_list, key=square)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# functions can also have multiple return statements - the first one that is encountered will be taken\n",
+    "def is_greater_than_10(a_number):\n",
+    "    if a_number > 10:\n",
+    "        # if it's greater than 10, we enter the block and exit the function early\n",
+    "        return True\n",
+    "    # otherwise we end up here and can return something else\n",
+    "    print(\"[is_greater_than_10] skipped the if block!\")\n",
+    "    return False\n",
+    "\n",
+    "print(\"return value for -5:\", is_greater_than_10(-5))\n",
+    "print(\"return value for 10:\", is_greater_than_10(10))\n",
+    "print(\"return value for 11:\", is_greater_than_10(11))"
    ]
   },
   {
