--- a/1_python_basics.ipynb
+++ b/1_python_basics.ipynb
@@ -15,7 +15,7 @@
     "- [Video Tutorials on YouTube](https://www.youtube.com/playlist?list=PL-osiE80TeTt2d9bfVyTiXJA-UTHn6WwU)\n",
     "- [Beginners Computer Science & Python Course on Udacity](https://eu.udacity.com/course/intro-to-computer-science--cs101)\n",
     "\n",
-    "You can execute the code in the cells by clicking into a cell and pressing shift+enter or clicking the \"run\" button at the top. Feel free to experiment a bit by changing the code in the examples to see what happens. Don't worry if you get any error messages - consider them hints on how to do better ;-)\n",
+    "You can execute the code in the cells by clicking into a cell and pressing \"shift\"+\"enter\" or clicking the \"run\" button at the top. Feel free to experiment a bit by changing the code in the examples to see what happens. Don't worry if you get any error messages - consider them hints on how to do better ;-)\n",
     "\n",
     "Instead of just running through the examples, it helps to first think about what you would expect the output of a code cell to be and then execute it to see if you were right. If you weren't, please make sure you understand why and what is happening in the code!\n",
     "\n",
@@ -613,7 +613,7 @@
    "outputs": [],
    "source": [
     "# with : you can specify a range of elements to be selected\n",
-    "a_list[1:] # get all elements starting with the first one until the end of the list"
+    "a_list[1:] # get all elements starting with the second one until the end of the list"
    ]
   },
   {
@@ -1267,7 +1267,7 @@
     "elif i <= 100:\n",
     "    print(\"%i is between 10 and 100\" % i)\n",
     "else:\n",
-    "    print(\"% is greater than 100\" % i)"
+    "    print(\"%i is greater than 100\" % i)"
    ]
   },
   {
