--- a/1_python_basics.ipynb
+++ b/1_python_basics.ipynb
@@ -898,6 +898,20 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "# instead of asking with a key directly with [], you can also use .get()\n",
+    "# this allows you to specify a default value that is returned instead\n",
+    "# if the key was not found (otherwise you get None instead of an error)\n",
+    "print(a_dict.get(4))    # key exists\n",
+    "print(a_dict.get(42))   # key doesn't exist\n",
+    "print(a_dict.get(42, \"Key not found\"))  # return default value instead"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
     "# with a_dict.keys(), .values(), or .items() you get all the keys, values, or key-value-pairs in the dict\n",
     "print(a_dict.keys())\n",
     "print(a_dict.values())\n",
@@ -1076,8 +1090,7 @@
    "outputs": [],
    "source": [
     "print(max(a_dict))                 # get the largest key\n",
-    "print(max(a_dict.values()))        # get the largest value\n",
-    "print(max(a_dict, key=a_dict.get)) # get the key associated with the largest value"
+    "print(max(a_dict.values()))        # get the largest value"
    ]
   },
   {
@@ -1087,8 +1100,24 @@
    "outputs": [],
    "source": [
     "print(sorted(a_dict))                 # sorted keys\n",
-    "print(sorted(a_dict.values()))        # sorted values\n",
-    "print(sorted(a_dict, key=a_dict.get)) # keys sorted by values"
+    "print(sorted(a_dict.values()))        # sorted values"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# when calling the min/max/sorted functions with a collection, you can pass another function\n",
+    "# as the \"key\" argument, which is then called and evaluated on every element from the collection\n",
+    "# and instead of using the elements themselves to determine the largest or smallest element,\n",
+    "# whatever is returned by the given \"key\" function for each element is used instead\n",
+    "# (more on this later when we discuss functions).\n",
+    "# you have already learned that a_dict.get() gives the value in the dict for a specific key.\n",
+    "# we can use this here to sort the keys in a dictionary based on their values:\n",
+    "print(max(a_dict, key=a_dict.get))     # get the key associated with the largest value\n",
+    "print(sorted(a_dict, key=a_dict.get))  # keys sorted by values"
    ]
   },
   {
@@ -1722,6 +1751,8 @@
     "\n",
     "# with \"as\" you can define a shortcut name on which you can call the functions of the library\n",
     "import some_library_with_a_very_long_name as long_lib\n",
+    "# so instead of calling \"some_library_with_a_very_long_name.function_that_i_need()\"\n",
+    "# you can just call \"long_lib.function_that_i_need()\"\n",
     "\n",
     "# sometimes you only need a very specific function or class from a library\n",
     "# then you can also import it directly\n",
@@ -1730,9 +1761,10 @@
     "# you just call \"function_that_i_need()\" directly, i.e., as if you had defined it in your own code here\n",
     "\n",
     "# sometimes the functions that you need are in a submodule of the library\n",
-    "# this is accessed with a \".\". Also, multiple things that want to import\n",
-    "# can be separated by commas:\n",
+    "# this is accessed with a \".\". Also, multiple things that you want to import\n",
+    "# from a (sub)module can be separated by commas:\n",
     "from some_library.submodule_name import another_function, Some_Class\n",
+    "# you can now call \"another_function()\" and \"Some_Class()\" directly\n",
     "\n",
     "# Never do this:\n",
     "from some_library import *\n",
