clearer tuple definition

--- a/1_python_basics.ipynb
+++ b/1_python_basics.ipynb
@@ -549,12 +549,19 @@
    "source": [
     "### Collections\n",
     "More complex datatypes allow us to store multiple values at a time. These include:\n",
-    "- `list`: A list is marked by `[]` surrounding `,`-separated items.\n",
-    "- `tuple`: A tuple is similar to a list but written with `()` instead of `[]` and it's an immutable datatype, i.e., once it's been defined, the values in a tuple can't be changed anymore.\n",
-    "- `set`: A set is similar to a list but every item occurs only once and the elements are not in a specific order.\n",
+    "- `tuple`: A tuple contains multiple elements separated by `,`. Usually, these elements are grouped by `()`. A tuple is an immutable datatype, i.e., once it's been defined, the values in a tuple can't be changed anymore.\n",
+    "- `list`: A list is very similar to a tuple but with `[]` surrounding the items and the elements in a list can be changed after its creation.\n",
+    "- `set`: In a set, every item occurs only once and the elements are not in a specific order.\n",
     "- `dict`: A dictionary (similar to a hash table in other programming languages) contains a mapping between keys and values. While the values can be arbitrarily complex datatypes, the keys have to be something \"hashable\", like an int, string, or tuple.\n",
     "\n",
     "Check the [official documentation](https://docs.python.org/3/tutorial/datastructures.html) for more details, e.g., functions you can call on lists etc."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "#### Lists"
    ]
   },
   {
@@ -783,7 +790,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# tuples are really similar to lists but defined with () instead of []\n",
+    "# tuples are really similar to lists but written without [] (usually with () for clarity)\n",
     "a_tuple = (1, 2, \"hey\")\n",
     "a_tuple"
    ]
@@ -1099,8 +1106,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "print(sorted(a_dict))                 # sorted keys\n",
-    "print(sorted(a_dict.values()))        # sorted values"
+    "print(sorted(a_dict))              # sorted keys\n",
+    "print(sorted(a_dict.values()))     # sorted values"
    ]
   },
   {
