multiple variable assignments

--- a/1_python_basics.ipynb
+++ b/1_python_basics.ipynb
@@ -816,6 +816,22 @@
    ]
   },
   {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# python supports assigning values to multiple variables at once\n",
+    "var0 = 8, \"hey\"        # var0 is a tuple with both values\n",
+    "print(\"var0:\", var0)\n",
+    "var1, var2 = var0  # the 2 values are unpacked into the two variables\n",
+    "print(\"var1: %r,     var2: %r\" % (var1, var2))\n",
+    "# this is really handy for switching the values of 2 variables, as you don't need a temp variable\n",
+    "var1, var2 = var2, var1 + 1\n",
+    "print(\"var1: %r, var2: %r\" % (var1, var2))"
+   ]
+  },
+  {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
