--- a/2_exercises.ipynb
+++ b/2_exercises.ipynb
@@ -82,7 +82,8 @@
     "Check if a given password fulfills certain conditions to be considered strong enough:\n",
     "- contains at least 10 characters\n",
     "- contains at least one lower case letter\n",
-    "- contains at least one upper case letter.\n",
+    "- contains at least one upper case letter\n",
+    "- contains at least one digit.\n",
     "\n",
     "**Input:** A string with a password. You are assured that it does not contain any whitespace.\n",
     "\n",
