--- a/4_numpy_pandas.ipynb
+++ b/4_numpy_pandas.ipynb
@@ -16,7 +16,11 @@
     "### numpy\n",
     "The `numpy` library is used for mathematical operations and scientific computations. If you need more advanced operations, also check out the `scipy` library, which is closely related to numpy. If you have worked with MATLAB before, many things here will seem very familiar, just always remember that in Python you start indexing at 0, not 1.\n",
     "\n",
-    "The most important data structure in numpy is the so called `array`, which is used to represent a vector or matrix."
+    "The most important data structure in numpy is the so called `array`, which is used to represent a vector or matrix.\n",
+    "\n",
+    "**Official `numpy` tutorial:** https://numpy.org/devdocs/user/quickstart.html\n",
+    "\n",
+    "(If you're interested in more advanced scientific programming (e.g. optimization), you may also want to check out the official [scipy tutorial](https://docs.scipy.org/doc/scipy/reference/tutorial/index.html) for more information on the `scipy` library.)"
    ]
   },
   {
@@ -222,7 +226,9 @@
     "The `pandas` library takes our basic data manipulation to the next level. It is a lifesaver if you need to read in nasty excel files and helps you with all your basic data science tasks, e.g., if you want to get a quick overview of your data or create some simple plots. If you have used the R programming language before, some concepts here might be familiar to you.\n",
     "\n",
     "The most important data structure in pandas is the `DataFrame`, which is simply a table with all your data in it. \n",
-    "We'll always assume that our data is structured such that each row corresponds to one data point (or observation), while each column represents a different attribute/variable that was measured for the data points (in the machine learning contexts, these different attributes are usually refered to as \"features\"). "
+    "We'll always assume that our data is structured such that each row corresponds to one data point (or observation), while each column represents a different attribute/variable that was measured for the data points (in the machine learning contexts, these different attributes are usually refered to as \"features\"). \n",
+    "\n",
+    "**Official `pandas` tutorial:** https://pandas.pydata.org/pandas-docs/stable/getting_started/index.html"
    ]
   },
   {
@@ -371,7 +377,9 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "#### Import & Export"
+    "#### Import & Export\n",
+    "\n",
+    "Have a look at the [pandas tutorial](https://pandas.pydata.org/pandas-docs/stable/user_guide/io.html) for more info on possible file formats as well as additional options for saving and loading data."
    ]
   },
   {
