--- a/3_exercise_solutions.ipynb
+++ b/3_exercise_solutions.ipynb
@@ -45,8 +45,20 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# elegant one liner\n",
+    "# improved basic solution with a list comprehension\n",
     "def all_the_same2(a_list):\n",
+    "    # creates a list with True and False where all need to be True\n",
+    "    return all([a == a_list[0] for a in a_list])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 3,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# elegant one liner\n",
+    "def all_the_same3(a_list):\n",
     "    # set(a_list) gives the unique elements in the list,\n",
     "    # if there are 1 or 0 unique elements, the elements in the original are all the same,\n",
     "    # otherwise the length check evaluates to False\n",
@@ -64,7 +76,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -112,7 +124,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -141,7 +153,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -157,7 +169,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -172,14 +184,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "1.69 ms ± 5.55 µs per loop (mean ± std. dev. of 7 runs, 1000 loops each)\n"
+      "1.85 ms ± 183 µs per loop (mean ± std. dev. of 7 runs, 1000 loops each)\n"
      ]
     }
    ],
@@ -192,14 +204,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "120 µs ± 445 ns per loop (mean ± std. dev. of 7 runs, 10000 loops each)\n"
+      "122 µs ± 3.83 µs per loop (mean ± std. dev. of 7 runs, 10000 loops each)\n"
      ]
     }
    ],
@@ -211,14 +223,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "92.7 µs ± 449 ns per loop (mean ± std. dev. of 7 runs, 10000 loops each)\n"
+      "103 µs ± 17.7 µs per loop (mean ± std. dev. of 7 runs, 10000 loops each)\n"
      ]
     }
    ],
@@ -238,7 +250,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -262,11 +274,36 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "The solution above can also be written in a more concise way using a one line `if-else` statement:\n",
+    "\n",
+    "```python\n",
+    "# full if-else statement\n",
+    "if AAA:\n",
+    "    variable = XXX\n",
+    "else:\n",
+    "    variable = YYY\n",
+    "# equivalent one liner:\n",
+    "variable = XXX if AAA else YYY\n",
+    "```"
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "# shorter solution\n",
+    "def flat_list(a_list):\n",
+    "    flattened_list = []\n",
+    "    for elem in a_list:\n",
+    "        # one line if-else statement\n",
+    "        flattened_list.extend(flat_list(elem) if type(elem)==list else [elem])\n",
+    "    return flattened_list"
+   ]
   }
  ],
  "metadata": {
