extended pandas tutorial

--- a/4_numpy_pandas.ipynb
+++ b/4_numpy_pandas.ipynb
@@ -6,7 +6,10 @@
    "source": [
     "## Basic Data Science Libraries\n",
     "\n",
-    "This notebook contains a brief introduction into the basic data science libraries `numpy`, `pandas`, and `matplotlib`. These libraries help you to efficiently store and look at your data. It is especially important that you know how to access individual elements/rows/columns from a matrix or table with various indexing techniques. Therefore, make sure to play around here a bit until you feel comfortable with these methods."
+    "This notebook contains a brief introduction into the basic data science libraries `numpy`, `pandas`, and `matplotlib`. These libraries help you to efficiently store and look at your data. It is especially important that you know how to access individual elements/rows/columns from a matrix or table with various indexing techniques. Therefore, make sure to play around here a bit until you feel comfortable with these methods.\n",
+    "\n",
+    "\n",
+    "**Exercise:** After you're done with the tutorial, find a dataset of your own, load it with pandas, and examine the different variables."
    ]
   },
   {
@@ -92,6 +95,16 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "# elementwise multiplication\n",
+    "M*M"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
     "# make sure the dimensions always line up, otherwise you'll get an error like this\n",
     "np.dot(M, M)"
    ]
@@ -102,7 +115,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# check the shape of a matrix or vector\n",
+    "# check the shape of a matrix or vector (e.g. to investigate errors like the one above)\n",
     "M.shape"
    ]
   },
@@ -221,6 +234,78 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "### Matplotlib\n",
+    "\n",
+    "With the `matplotlib` library, it is possible to create highly customizable plots. It is also the basis for more advanced plotting libraries such as `seaborn`.\n",
+    "\n",
+    "[This set of cheat sheets](https://github.com/matplotlib/cheatsheets) may be helpful for creating perfect plots."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# import with standard abbreviation\n",
+    "import matplotlib.pyplot as plt"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# get some data that we want to plot\n",
+    "x = np.arange(10)  # numpy array with numbers 0 - 9\n",
+    "y = x**2           # squared numbers\n",
+    "# create a very basic plot of x vs. y\n",
+    "plt.figure()   # new canvas\n",
+    "plt.plot(x, y) # simple line plot"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# more advanced plot with axis labels etc.\n",
+    "plt.figure()\n",
+    "plt.plot(x, y, label=\"x^2\")  # 'label' is later used in the legend\n",
+    "plt.plot(x, x**3, \"r\", label=\"x^3\") # \"r\" creates a red line\n",
+    "# axis labels, legend based on the specified labels, and title\n",
+    "plt.xlabel(\"X axis\")\n",
+    "plt.ylabel(\"Y axis\")\n",
+    "plt.legend(loc=0)  # loc=0 automatically determines the best location for the legend\n",
+    "plt.title(\"Title of the figure\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# create randomly distributed data\n",
+    "x = np.random.randn(100)\n",
+    "y = np.random.randn(100)\n",
+    "# create a scatter plot of x vs y\n",
+    "plt.figure()\n",
+    "# by passing for c an array of the same length as x and y,\n",
+    "# each dot can have its individual color\n",
+    "plt.scatter(x, y, c=x)\n",
+    "plt.xlabel(\"X axis\")\n",
+    "plt.ylabel(\"Y axis\")\n",
+    "plt.colorbar()  # creates a colorbar (more appropriate than a legend here)\n",
+    "plt.title(\"Title of the figure\")"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "### Pandas\n",
     "\n",
     "The `pandas` library takes our basic data manipulation to the next level. It is a lifesaver if you need to read in nasty excel files and helps you with all your basic data science tasks, e.g., if you want to get a quick overview of your data or create some simple plots. If you have used the R programming language before, some concepts here might be familiar to you.\n",
@@ -254,8 +339,20 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# create a dataframe from the matrix M\n",
-    "pd.DataFrame(M)"
+    "# create a dataframe from a matrix M with 100 rows and 3 columns\n",
+    "M = np.random.random((100, 3))\n",
+    "df = pd.DataFrame(M)\n",
+    "df"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# convert dataframe to numpy array\n",
+    "df.to_numpy()"
    ]
   },
   {
@@ -283,9 +380,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# notice the additional column with 0-3 above; this is the index column\n",
-    "# for easier handeling of the data, we can explicitly set\n",
-    "# the subject_id column as our index\n",
+    "# notice the additional column on the left with 0-3 above; this is the index column\n",
+    "# for easier handeling of the data, we can explicitly set the subject_id column as our index\n",
     "df = df.set_index('subject_id')\n",
     "df"
    ]
@@ -306,6 +402,16 @@
     "# select the column \"sex\" from the dataframe \n",
     "# (returns a pandas series, similar to a flat array in numpy)\n",
     "df['sex']"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# by selecting a list of columns, the dataframe structure is preserved\n",
+    "df[['sex']]"
    ]
   },
   {
@@ -356,6 +462,18 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "# we can also compute different aggregations for different columns; just pass\n",
+    "# any function that are then called on the specified column, e.g. np.mean(df[\"BMI\"])\n",
+    "# maximum for height, minimum for weight, mean for BMI\n",
+    "df.agg({'height': max, 'weight': min, 'BMI': np.mean}) "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
     "# by grouping based on one column...\n",
     "g = df.groupby('sex')\n",
     "# ...we can compute statistics for different groups\n",
@@ -368,8 +486,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# on a group we can also compute different aggregations for different columns\n",
-    "# maximum for height, minimum for weight, mean for BMI\n",
+    "# aggregations work here too\n",
     "g.agg({'height': max, 'weight': min, 'BMI': np.mean}) "
    ]
   },
@@ -389,6 +506,7 @@
    "outputs": [],
    "source": [
     "# we can export our data as a .csv file (other formats are also supported)\n",
+    "# (have a look at the folder to see the file that was created!)\n",
     "df.to_csv('bmi_dataset.csv')"
    ]
   },
@@ -409,10 +527,21 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# with additional options, we can already correctly set our index column\n",
+    "# note how our index column was treated like just a regular column\n",
+    "# with additional options, we can already correctly set our index column while loading\n",
     "# other options also allow to e.g. skip some lines at the beginning of a file, etc.\n",
     "df_imported = pd.read_csv('bmi_dataset.csv', index_col='subject_id')\n",
     "df_imported"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# pandas infers the data type of the columns when reading in the data \n",
+    "df_imported.dtypes"
    ]
   },
   {
@@ -478,17 +607,149 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "# iloc works similarly to numpy indexing\n",
+    "df.iloc[:2, [0, 2]]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
     "# select a specific entry in the dataframe using index name and column name\n",
     "df.loc['subject8', 'BMI']"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# also works with lists of names\n",
+    "df.loc[['subject8', 'subject12'], ['BMI', 'sex']]"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### Matplotlib\n",
+    "#### Dealing with missing values (NaNs)\n",
+    "NaN (\"Not a Number\") or missing values in your data are no fun and can lead to errors when using this data down the road. Therefore you should remove these entries (or fill them with sensible defaults, though this can result in other problems)."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# read in a dataset\n",
+    "df = pd.read_csv(\"data/test_na.csv\")\n",
+    "# there are some NaNs!\n",
+    "df"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# check how many NaNs you have per column (try also without the .sum() or .sum(axis=1))\n",
+    "df.isnull().sum(axis=0)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# you could fill the missing values with some defaults, e.g. 0\n",
+    "df.fillna(0)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# or with mean values - use with EXTREME caution!!!\n",
+    "df.fillna(df.mean())"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# usually it's safest if we just remove the data points that have NaNs anywhere\n",
+    "# instead of adding garbage values to the data.\n",
+    "# but be aware that NaNs might not be random, e.g., in surveys rich people might more\n",
+    "# often to decline to answer questions about their wealth than poor people\n",
+    "# so removing data points this way can create a systematic bias in the dataset.\n",
+    "# just be sure to note your decision somewhere and communicate it when you present your results!\n",
+    "df = df.dropna(axis=0, how=\"any\")  # axis: drop rows, not columns; how: if there is a NaN anywhere\n",
+    "# rows 1 and 3 are missing now\n",
+    "df"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "#### Examining and transforming features\n",
+    "In machine learning you usually want your variables to be normally distributed. When you get a new dataset, always plot all the variables and if they aren't (approximately) normally/uniformly distributed, consider applying a transformation, e.g., take the logarithm of a variable with a long tail of extreme values."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# plot the distribution of values for each column\n",
+    "df.hist(bins=20)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# plot x2 again to examine these few large values a bit more in detail\n",
+    "plt.figure()\n",
+    "# plot x2 against some small random jitter\n",
+    "plt.scatter(df[\"x2\"], 0.1*np.random.randn(len(df[\"x2\"])))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# try a transformation of x2 to get the values more normally distributed, i.e.,\n",
+    "# without these few extreme values\n",
+    "x2_new = np.log(df[\"x2\"] + 1)\n",
+    "plt.figure()\n",
+    "# not perfect, but much better!\n",
+    "plt.scatter(x2_new, 0.1*np.random.randn(len(x2_new)))"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "#### Dealing with time series data\n",
+    "Time series data is often stored in specialized databases, which export the data in a so-called \"long format\", where the variables are no longer individual columns (as opposed to the \"wide format\" that we were dealing with so far). To later use this data with our machine learning methods, we need to transform it into the wide format (data points/observations in rows, variables/features in columns).\n",
     "\n",
-    "With the `matplotlib` library, it is possible to create highly customizable plots. It is also the basis for more advanced plotting libraries such as `seaborn`."
+    "The dataset is originally from [here](http://archive.ics.uci.edu/ml/datasets/Occupancy+Detection+) but was modified for our purposes. It contains timestamped data of different sensors (temp, co2, etc.) in a room and how many people are currently present in the room."
    ]
   },
   {
@@ -497,8 +758,9 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# import with standard abbreviation\n",
-    "import matplotlib.pyplot as plt"
+    "# load a time series dataset in long format\n",
+    "df = pd.read_csv(\"data/test_timeseries.csv\")\n",
+    "df"
    ]
   },
   {
@@ -507,12 +769,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# get some data that we want to plot\n",
-    "x = np.arange(10)  # numpy array with numbers 0 - 9\n",
-    "y = x**2           # squared numbers\n",
-    "# create a very basic plot of x vs. y\n",
-    "plt.figure()   # new canvas\n",
-    "plt.plot(x, y) # simple line plot"
+    "# check what kind of variables there are\n",
+    "df[\"variable\"].unique()"
    ]
   },
   {
@@ -521,15 +779,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# more advanced plot with axis labels etc.\n",
-    "plt.figure()\n",
-    "plt.plot(x, y, label=\"x^2\")  # label is later used in the legend\n",
-    "plt.plot(x, x**3, \"r\", label=\"x^3\") # \"r\" creates a red line\n",
-    "# axis labels, legend based on the specified labels, and title\n",
-    "plt.xlabel(\"X axis\")\n",
-    "plt.ylabel(\"Y axis\")\n",
-    "plt.legend(loc=0)  # loc=0 automatically determines the best location for the legend\n",
-    "plt.title(\"Title of the figure\")"
+    "# check what data types were detected\n",
+    "df.dtypes"
    ]
   },
   {
@@ -538,18 +789,76 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# create randomly distributed data\n",
-    "x = np.random.randn(100)\n",
-    "y = np.random.randn(100)\n",
-    "# create a scatter plot of x vs y\n",
-    "plt.figure()\n",
-    "# by passing for c an array of the same length as x and y,\n",
-    "# each dot can have its individual color\n",
-    "plt.scatter(x, y, c=x)\n",
-    "plt.xlabel(\"X axis\")\n",
-    "plt.ylabel(\"Y axis\")\n",
-    "plt.colorbar()  # creates a colorbar (more appropriate than a legend here)\n",
-    "plt.title(\"Title of the figure\")"
+    "# apparently, timestamp was detected as a string (\"object\")\n",
+    "# we want to transform it into a proper datetime format to enable\n",
+    "# a bunch of data operations on time stamps (incl. correct plotting)\n",
+    "df[\"timestamp\"] = pd.to_datetime(df[\"timestamp\"], format=\"%Y-%m-%d %H:%M:%S\")\n",
+    "df.dtypes"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# now we want to convert the long format to our regular wide format\n",
+    "df_wide = df.pivot(index='timestamp', columns='variable')\n",
+    "# by default, the columns are now a MultiIndex; with droplevel we get a more normal dataframe\n",
+    "df_wide.columns = df_wide.columns.droplevel(0)\n",
+    "df_wide"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# lets plot the time series (only works this nicely because \n",
+    "# the timestamp is the index column and was correctly formatted)\n",
+    "df_wide.plot(subplots=True);"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# often, time series data is sampled with a very high frequency (every few seconds)\n",
+    "# but the sensor measurements might not change that much over time\n",
+    "# you can use \"resample\" to change the sampling frequency\n",
+    "# by calling .mean() on the resampler, we tell it to compute the new values as the mean\n",
+    "# of the values in one interval. you could also use the function to upsample your data.\n",
+    "df_wide = df_wide.resample(\"10min\").mean()\n",
+    "# looks a bit smoother than above\n",
+    "df_wide.plot(subplots=True);"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Exercise: Work with your own data\n",
+    "\n",
+    "Find a dataset, load it with pandas, make sure it is in the correct format (data points in rows, variables/features in columns; columns should have the correct column names), and examine the different variables (e.g. by plotting them).\n",
+    "\n",
+    "You can also do this in a new notebook, just remember to import all needed libraries.\n",
+    "\n",
+    "If you don't have a dataset of your own that you want to explore, maybe you'll find one here that interests you: https://www.kaggle.com/datasets?fileType=csv&sizeEnd=100%2CMB\n",
+    "\n",
+    "Don't be afraid to google if you don't know how to do something (search in English to get more results!). You can also get the documentation of any function by writing a `?` after its name to see, for example, what parameters you can pass to it."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# execute this to see the documentation of the read_csv function\n",
+    "pd.read_csv?"
    ]
   },
   {
@@ -576,7 +885,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.7.3"
+   "version": "3.7.6"
   }
  },
  "nbformat": 4,
